--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,16 @@
 name: Waka Readme
+
 on:
   schedule:
-    - cron: '0 */8 * * *'
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
   workflow_dispatch:
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update Readme 
     runs-on: ubuntu-latest
     steps:
       - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN}}
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_LANGUAGE: "True"
-          SHOW_OS: "True"
-          SHOW_SHORT_INFO: "False"
-          SHOW_LOC_CHART: "False"
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
